--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/Volodya1989/employee_directory",
+  "homepage": "http://Volodya1989.github.io/employee_directory",
   "name": "employee_trucker",
   "version": "0.1.0",
   "private": true,
