--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "homepage": "http://Volodya1989.github.io/employee_directory",
   "name": "employee_trucker",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.19.2",
+    "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-moment": "^0.9.7",
     "react-scripts": "3.4.1"
   },
   "scripts": {
